Added an OpenWRT Makefile
Thanks to datahead.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,15 @@
 CCFLAGS = -std=c99 -O3
-LDFLAGS = -lssl -lcrypto
+LDFLAGS = -lcrypto
 
 TARGET = pixiewps
-PREFIX = $(DESTDIR)/usr/local
+PREFIX = $(DESTDIR)/usr
 BINDIR = $(PREFIX)/bin
 
 all:
 	$(CC) $(CCFLAGS) -o $(TARGET) $(TARGET).c random_r.c $(LDFLAGS)
 
 install:
-	install -D pixiewps $(BINDIR)/$(TARGET)
+	install -D $(TARGET) $(BINDIR)/$(TARGET)
 	install -m 755 $(TARGET) $(BINDIR)
 
 uninstall:
