--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-CCFLAGS = -std=c99 -O3
+CCFLAGS = -std=c99 -O3 -Wno-error=deprecated-declarations
 LDFLAGS = -lcrypto -I../include
 
 TARGET = pixiewps
@@ -6,7 +6,7 @@ PREFIX = $(DESTDIR)/usr
 BINDIR = $(PREFIX)/bin
 
 all:
-	$(CC) $(CCFLAGS) -o $(TARGET) $(TARGET).c random_r.c $(LDFLAGS)
+	$(CC) $(CCFLAGS) -o $(TARGET) $(TARGET).c $(LDFLAGS)
 
 install:
 	install -D $(TARGET) $(BINDIR)/$(TARGET)
