--- a/src/Makefile
+++ b/src/Makefile
@@ -4,11 +4,13 @@ LDFLAGS = -lcrypto -I../include
 TARGET = pixiewps
 PREFIX = $(DESTDIR)/usr
 BINDIR = $(PREFIX)/bin
+OLDDIR = $(PREFIX)/local/bin
 
 all:
 	$(CC) $(CCFLAGS) -o $(TARGET) $(TARGET).c $(LDFLAGS)
 
 install:
+	rm -f $(OLDDIR)/$(TARGET)
 	install -D $(TARGET) $(BINDIR)/$(TARGET)
 	install -m 755 $(TARGET) $(BINDIR)
 
