--- a/src/Makefile
+++ b/src/Makefile
@@ -1,17 +1,18 @@
-CCFLAGS = -std=c99 -O3 -Wno-error=deprecated-declarations
+CCFLAGS = -std=c99 -O3 -Wno-deprecated-declarations
 LDFLAGS = -lcrypto -I../include
 
 TARGET = pixiewps
+SOURCE = $(TARGET).c random_r.c
 PREFIX = $(DESTDIR)/usr
 BINDIR = $(PREFIX)/bin
 OLDDIR = $(PREFIX)/local/bin
 
 all:
-	$(CC) $(CCFLAGS) -o $(TARGET) $(TARGET).c $(LDFLAGS)
+	$(CC) $(CCFLAGS) -o $(TARGET) $(SOURCE) $(LDFLAGS)
 
 install:
 	rm -f $(OLDDIR)/$(TARGET)
-	install -D $(TARGET) $(BINDIR)/$(TARGET)
+	install $(TARGET) $(BINDIR)/$(TARGET)
 	install -m 755 $(TARGET) $(BINDIR)
 
 uninstall:
