Fixed uninstall target
See #24

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,7 +20,7 @@ install:
 	install -m 755 $(TARGET) $(LOCDIR)
 
 uninstall:
-	rm $(BINDIR)/$(TARGET)
+	rm $(LOCDIR)/$(TARGET)
 
 clean:
 	rm -f $(TARGET)
